# robot_calibration_lib

./: .gitignore  CMakeLists.txt  README.md
calibration/: CMakeLists.txt  calibration-config.cmake.in
calibration/include/calibration/: aruco_registration.h  calibration_fileio.h  chessboard_calibration.h  general_header.h
calibration/src/: aruco_registration.cpp  calibration_fileio.cpp  chessboard_calibration.cpp
cmake/: cmake-config.h.in  third_party_import.cmake
example/: CMakeLists.txt  aruco_test.cpp  simple_opencv_example.cpp
test/: CMakeLists.txt  main.cpp
test/test_yaml/: camera_matrix.yaml  kinect_robot_calibration.yaml
